--- a/.github/workflows/nvidia4.yml
+++ b/.github/workflows/nvidia4.yml
@@ -36,7 +36,7 @@ jobs:
           env
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
-          autreconf -fvi
+          autoreconf -fvi
           which mpicc
           #./configure CC=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/comm_libs/openmpi4/bin/mpicc FC=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/comm_libs/openmpi4/bin/mpifort FCFLAGS=-fPIC --enable-fortran --enable-shared --enable-parallel
           ./configure CC="$(which nvc)" FC="$(which nvfortran)" FCFLAGS='-fPIC' --enable-fortran --enable-shared --enable-parallel
