--- a/.github/workflows/nvidia4.yml
+++ b/.github/workflows/nvidia4.yml
@@ -39,7 +39,7 @@ jobs:
           env
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
-          autoreconf -fvi
+          ./autogen.sh
           which mpicc
           ./configure CC=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/comm_libs/openmpi4/bin/mpicc FC=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/comm_libs/openmpi4/bin/mpifort FCFLAGS="-fPIC -fortranlibs" --enable-fortran --enable-shared --enable-parallel
           # ./configure CC="$(which nvc)" FC="$(which nvfortran)" FCFLAGS='-fpic -fortranlibs' --enable-fortran --enable-shared --enable-parallel
