--- a/.github/workflows/nvidia7.yml
+++ b/.github/workflows/nvidia7.yml
@@ -1,9 +1,9 @@
-name: NVHPC Autotools fortran parallel
+name: NVHPC Autotools fortran parallel NPROC
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -22,8 +22,9 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y nvhpc-23-7          
       - name: Test HDF5
+        env:
+          NPROCS: 2      
         run: |
-          export RUNPARALLEL="mpiexec -n 4 -host localhost:4"
           export NVHPCSDK=/opt/nvidia/hpc_sdk
           export OMPI_CXX=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/compilers/bin/nvc++
           export OMPI_CC=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/compilers/bin/nvc
