ci: fix yml syntax

--- a/.github/workflows/mac-cmake-flang-mpich.yml
+++ b/.github/workflows/mac-cmake-flang-mpich.yml
@@ -34,41 +34,43 @@ jobs:
       run: brew install llvm mpich ninja # carlocab/personal/flang
     - name: Install flang
       run : |
-      git clone https://github.com/llvm/llvm-project.git
-      cd llvm-project
-      mkdir build
-      mkdir install
-      ROOTDIR=`pwd`
-      INSTALLDIR=$ROOTDIR/install
-      echo $INSTALLDIR
-      cd build
-      cmake \
-        -G Ninja \
-        -DCMAKE_BUILD_TYPE=Release \
-        -DCMAKE_INSTALL_PREFIX=$INSTALLDIR \
-        -DCMAKE_CXX_STANDARD=17 \
-        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
-        -DCMAKE_CXX_LINK_FLAGS="-Wl,-rpath,$LD_LIBRARY_PATH" \
-        -DFLANG_ENABLE_WERROR=ON \
-        -DLLVM_ENABLE_ASSERTIONS=ON \
-        -DLLVM_TARGETS_TO_BUILD=host \
-        -DLLVM_LIT_ARGS=-v \
-        -DLLVM_ENABLE_PROJECTS="clang;mlir;flang;openmp" \
-        -DLLVM_ENABLE_RUNTIMES="compiler-rt" \
-        ../llvm-project/llvm
-      ninja
+        git clone https://github.com/llvm/llvm-project.git
+        cd llvm-project
+        mkdir build
+        mkdir install
+        ROOTDIR=`pwd`
+        INSTALLDIR=$ROOTDIR/install
+        echo $INSTALLDIR
+        cd build
+        cmake \
+          -G Ninja \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_INSTALL_PREFIX=$INSTALLDIR \
+          -DCMAKE_CXX_STANDARD=17 \
+          -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
+          -DCMAKE_CXX_LINK_FLAGS="-Wl,-rpath,$LD_LIBRARY_PATH" \
+          -DFLANG_ENABLE_WERROR=ON \
+          -DLLVM_ENABLE_ASSERTIONS=ON \
+          -DLLVM_TARGETS_TO_BUILD=host \
+          -DLLVM_LIT_ARGS=-v \
+          -DLLVM_ENABLE_PROJECTS="clang;mlir;flang;openmp" \
+          -DLLVM_ENABLE_RUNTIMES="compiler-rt" \
+          ../llvm-project/llvm
+        ninja
 
     - name: Get Sources
       uses: actions/checkout@v4
 
     - name: Configure
       run: |
-        export PATH="/usr/local/opt/llvm/bin:$PATH"
+        export LV=${{ runner.workspace }}/llvm-project/install
+        ls $LV
+        export PATH="/usr/local/opt/llvm/bin:$LV/bin:$PATH"
         export LDFLAGS="-L/usr/local/opt/llvm/lib"
         export CPPFLAGS="-I/usr/local/opt/llvm/include"
         export CFLAGS="-I/usr/local/opt/llvm/include"
-        # which flang-new
-        # export FC="$(which flang-new)"
+        which flang-new
+        export FC="$(which flang-new)"
         export CC="$(which clang)"
         echo $CC
         # echo $FC
