ci: run bat files again

--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -27,13 +27,15 @@ jobs:
         run: |
           cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat'
           dir 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\windows\bin\'
-          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'	  
+          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'
           dir 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\bin\'
       - name: Test HDF5
         env:
           FC: ${{ steps.setup-fortran.outputs.fc }}
           CC: ${{ steps.setup-fortran.outputs.cc }}
         run: |
+          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat'
+          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'
           Get-ChildItem env:
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
