ci: use mpiifort

--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -1,4 +1,4 @@
-name: windows Intel oneAPI
+name: win mpicc mpiifort
 
 on:
   push:
@@ -9,7 +9,9 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: lukka/get-cmake@latest
+      - name: Install CMake and Ninja
+        uses: lukka/get-cmake@latest
+	cmakeVersion: "3.27.0"
       - name: Install LLVM and Clang
         uses: KyleMayes/install-llvm-action@v1
         with:
@@ -30,9 +32,6 @@ jobs:
           cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'
           dir 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\bin\'
       - name: Test HDF5
-        env:
-          FC: ${{ steps.setup-fortran.outputs.fc }}
-          CC: ${{ steps.setup-fortran.outputs.cc }}
         run: |
           cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat'
           cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'
@@ -45,9 +44,11 @@ jobs:
           mkdir build
           cd build
           cmake -G Ninja `
-          -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/2023.2.0/windows/bin/icx.exe" `
-          -DCMAKE_CXX_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/2023.2.0/windows/bin/icx.exe" `
+          -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc" `
+          -DCMAKE_CXX_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicxx" `
+          -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort" `
           -DHDF5_BUILD_FORTRAN:BOOL=ON `
+          -DHDF5_ENABLE_PARALLEL:BOOL=ON `
           -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF `
           -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF  `
           ..
