--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: Install CMake and Ninja
         uses: lukka/get-cmake@latest
-	cmakeVersion: "3.27.0"
+        with:
+          cmakeVersion: "3.27.0"
       - name: Install LLVM and Clang
         uses: KyleMayes/install-llvm-action@v1
         with:
