--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -32,23 +32,24 @@ jobs:
           dir 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\windows\bin\'
           cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'
           dir 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\bin\'
-      - name: Test HDF5
+      - name: Test CMD
         shell: cmd
         run: |
           "C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat"
           "C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat"
-          git clone https://github.com/hyoklee/hdf5.git
+      - name: Checkout HDF5
+        shell: cmd
+        run: |
+          git clone https://github.com/HDFGroup/hdf5.git
+      - name: Configure
+        shell: cmd
+        run: |
           cd hdf5
           mkdir build
           cd build
-          cmake -G Ninja `
-          -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc" `
-          -DCMAKE_CXX_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicxx" `
-          -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort" `
-          -DHDF5_BUILD_FORTRAN:BOOL=ON `
-          -DHDF5_ENABLE_PARALLEL:BOOL=ON `
-          -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF `
-          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF  `
-          ..
+          cmake -G Ninja-DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc" -DCMAKE_CXX_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicxx" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
+      - name: Build & Test
+        shell: cmd
+        run: |
           ninja
           ninja test
