--- a/.github/workflows/win-icx.yml
+++ b/.github/workflows/win-icx.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Test HDF5
         run: |
           cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat'
-          git clone https://github.com/hyoklee/hdf5.git
+          git clone https://github.com/HDFgroup/hdf5.git
           cd hdf5
           mkdir build
           cd build
