--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -47,8 +47,7 @@ jobs:
       - name: Configure
         shell: cmd
         run: |
-          set
-          mpicc
+	  "c:\Program Files (x86)\Intel\oneAPI\setvars.bat"
           cd hdf5
           mkdir build
           cd build
