--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -46,7 +46,8 @@ jobs:
           git clone https://github.com/HDFGroup/hdf5.git
       - name: Configure
         run: |
-          cmd /c  'c:\Program Files (x86)\Intel\oneAPI\setvars.bat'
+          cmd /c "C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat"	
+          cmd /c  'C:\Program Files (x86)\Intel\oneAPI\setvars.bat'
           cd hdf5
           mkdir build
           cd build
