--- a/.github/workflows/win-setup-bash.yml
+++ b/.github/workflows/win-setup-bash.yml
@@ -3,7 +3,7 @@ name: win mpicc mpiifort
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -45,9 +45,8 @@ jobs:
         run: |
           git clone https://github.com/HDFGroup/hdf5.git
       - name: Configure
+        shell: bash
         run: |
-          cmd /c "C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat"	
-          cmd /c  'C:\Program Files (x86)\Intel\oneAPI\setvars.bat'
           cd hdf5
           mkdir build
           cd build
