--- a/.github/workflows/win-setup-bash.yml
+++ b/.github/workflows/win-setup-bash.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Configure
         shell: bash
         run: |
+          export PATH=/c/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/release:/c/Program Files (x86)/Intel/oneAPI/mpi//bin:$PATH
           env
           mpicc --version
           cd hdf5
