--- a/.github/workflows/win-setup3.yml
+++ b/.github/workflows/win-setup3.yml
@@ -56,6 +56,7 @@ jobs:
         shell: cmd
         run: |
           set
+          cd hdf5
           mkdir build
           cd build
           cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" ..
