--- a/.github/workflows/win-setup4.yml
+++ b/.github/workflows/win-setup4.yml
@@ -1,9 +1,9 @@
-name: win mpicc mpiifort 3
+name: win mpicc mpiifort 4
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -59,6 +59,6 @@ jobs:
           cd hdf5
           mkdir build
           cd build
-          cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_PARALLEL:BOOL=ON ..
+          cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
           ninja
           ninja test
