--- a/.github/workflows/win-cmake-icx-f-p-sf.yml
+++ b/.github/workflows/win-cmake-icx-f-p-sf.yml
@@ -1,22 +1,16 @@
-name: win mpicc mpiifort 4
+name: windows CMake icx ifx parallel sf
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Install CMake and Ninja
+      - name: Install CMake
         uses: lukka/get-cmake@latest
-        with:
-          cmakeVersion: "3.27.0"
-      - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v1
-        with:
-          version: "15"
       - name: Install Intel OneAPI
         uses: awvwgk/setup-fortran@main
         with:
@@ -41,15 +35,13 @@ jobs:
       - name: Configure & Build
         shell: cmd
         run: |
-          set
           cd hdf5
           mkdir build
           cd build
-          cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
-          ninja
+          cmake -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
+          cmake --build . --config Release
       - name: Test
         shell: cmd
         run: |
-          pwd
           cd hdf5/build
-          ctest -E MPI_TEST_H5DIFF-h5diff -VV --output-on-error
+          ctest -C Release -E MPI_TEST_H5DIFF-h5diff -VV --output-on-error
