--- a/.github/workflows/win-cmake-icx-f-p-sf.yml
+++ b/.github/workflows/win-cmake-icx-f-p-sf.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Install CMake
         uses: lukka/get-cmake@latest
+        with:
+          cmakeVersion: "3.27.0"
       - name: Install Intel OneAPI
         uses: awvwgk/setup-fortran@main
         with:
