--- a/.github/workflows/win-cmake-icx-f-p.yml
+++ b/.github/workflows/win-cmake-icx-f-p.yml
@@ -1,9 +1,9 @@
-name: windows CMake icx ifx parallel sf
+name: windows CMake icx ifx parallel
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -40,7 +40,7 @@ jobs:
           cd hdf5
           mkdir build
           cd build
-          cmake -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
+          cmake -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
           cmake --build . --config Release
       - name: Test
         shell: cmd
