--- a/.github/workflows/aocc4.yml
+++ b/.github/workflows/aocc4.yml
@@ -1,4 +1,4 @@
-name: linux aocc ompi
+name: linux autotools aocc ompi
 
 on:
   push:
@@ -12,6 +12,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libncurses-dev libquadmath0 libstdc++6 libxml2
+      - name: Install AOCC 4.1.0
+        run: |
           wget https://download.amd.com/developer/eula/aocc/aocc-4-1/aocc-compiler-4.1.0.tar
           tar -xvf aocc-compiler-4.1.0.tar
           cd aocc-compiler-4.1.0
@@ -20,6 +22,8 @@ jobs:
           which clang
           which flang
           clang -v
+      - name: Install OpenMPI 4.1.5
+        run: |
           export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib:/usr/local/lib
           wget https://download.open-mpi.org/release/open-mpi/v4.1/openmpi-4.1.5.tar.gz
           tar zxvf openmpi-4.1.5.tar.gz
@@ -27,6 +31,10 @@ jobs:
           ./configure CC=/home/runner/work/actions/actions/aocc-compiler-4.1.0/bin/clang FC=/home/runner/work/actions/actions/aocc-compiler-4.1.0/bin/flang --prefix=/usr/local
           make
           sudo make install
+      - name: Install HDF5
+        env:
+          NPROCS: 2
+        run: |
           export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib:/usr/local/lib/openmpi:/usr/local/lib
           export LD_RUN_PATH=/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib:/usr/local/lib/openmpi:/usr/local/lib          
           export PATH=/usr/local/bin:$PATH
